<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:checked="true"
            android:icon="@drawable/ic_home_black_48dp"
            android:title="@string/title_section1" />

        <item
            android:id="@+id/games"
            android:checked="false"
            android:icon="@drawable/ic_security_black_48dp"
            android:title="@string/title_section2" />

        <item
            android:id="@+id/championship"
            android:checked="false"
            android:icon="@drawable/ic_flag_black_48dp"
            android:title="@string/title_section3" />

        <item
            android:id="@+id/players"
            android:checked="false"
            android:icon="@drawable/ic_group_black_48dp"
            android:title="@string/title_section4" />


        <item
            android:id="@+id/manager"
            android:checked="false"
            android:icon="@drawable/ic_settings_black_48dp"
            android:title="@string/title_section5" />
        <item
            android:id="@+id/teams"
            android:checked="false"
            android:icon="@drawable/ic_people_outline_black_48dp"
            android:title="@string/title_section6" />
        <item
            android:id="@+id/fields"
            android:checked="false"
            android:icon="@drawable/ic_map_black_48dp"
            android:title="@string/title_section7" />
        <item
            android:id="@+id/profile"
            android:checked="false"
            android:icon="@drawable/ic_person_black_48dp"
            android:title="@string/title_section8" />

    </group>
</menu>